# vit_from_scratch

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 1.encoder_decoder.ipynb  2.attention.ipynb  3.encoder_layer.ipynb  4. full_encoder.ipynb  5.encoder_classifier.ipynb  6.train_encoder.ipynb  flax_example.ipynb  train_encoder.py  transformer_structure.ipynb
vit/: encoder.py  multiheaded_attentions.py  positional_encoding.py
