[tool.poetry]
name = "vit"
version = "0.1.0"
description = ""
authors = ["fongsu <oliversssf2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
ipykernel = "^6.15.2"
tensorflow-datasets = "^4.6.0"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
